- fix Answer on mobile phones does not look good issue #22

--- a/src/app/actors/actors.component.css
+++ b/src/app/actors/actors.component.css
@@ -10,6 +10,12 @@
 
 .correct{
   color:greenyellow;
+  padding-bottom: 100px;
+  font-size: 6vw;
+}
+
+.tips{
+  padding-bottom: 50px;
 }
 
 .close-button{
@@ -42,7 +48,7 @@
 
 @keyframes example {
   from {
-    right:0%;
+    right:0;
     left:100%;}
   to {left:0;
     right:0;}
