--- a/src/app/club-crests/club-crests.component.css
+++ b/src/app/club-crests/club-crests.component.css
@@ -82,7 +82,7 @@
 .correct{
   color:greenyellow;
   font-size: xxx-large;
-  padding-bottom: 10px;
+  padding-bottom: 100px;
 }
 
 
