--- a/src/app/description/description.component.css
+++ b/src/app/description/description.component.css
@@ -35,7 +35,7 @@
 .correct {
   color: greenyellow;
   font-size: xxx-large;
-  padding-bottom: 10px;
+  padding-bottom: 100px;
 }
 
 .question {
@@ -45,3 +45,4 @@
 .tip {
   font-size: x-large;
 }
+
